--- a/docs/sass/_settings.scss
+++ b/docs/sass/_settings.scss
@@ -6,3 +6,9 @@ $govuk-font-family: system-ui, sans-serif;
 .dbt-header__logotype {
 	margin-bottom: -5px;
 }
+
+// Space out the logo better than the default
+.x-govuk-masthead__image > img {
+    display: block;
+    margin: 30px auto 0 auto;
+}
